fix the alignment shit !

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -126,6 +126,10 @@ p {
 }
 
 
+.hero-sec .navbar {
+  background-color: #0000 !important;
+  z-index: 100;
+}
 
 
 
